<resources>
    <string name="app_name">Converter</string>
    <string name="decimal">Decimal</string>
    <string name="base_10">Base 10</string>
    <string name="binary">Binary</string>
    <string name="base_2">Base 2</string>
    <string name="octal">Octal</string>
    <string name="base_8">Base 8</string>
    <string name="hexadecimal">Hexadecimal</string>
    <string name="base_16">Base 16</string>
    <string name="convert">Convert</string>
    <string name="clear">clear</string>
</resources>